<resources>
    <string name="placesApiKey">AIzaSyDhRY5q6woF-h1LWCxkXkO5SYMI3PG1iXg</string>
    <string name="analytics">Analytics</string>
    <string name="app_name">Repairs</string>
    <string name="connect_account">Connect Account</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="green_bar">green bar</string>
    <string name="register">Register</string>
    <string name="job_details">Job Details</string>
    <string name="service_type">Service Type</string>
    <string name="technician">Assigned Technician(s)</string>
    <string name="drop_down_arrow">drop down arrow</string>
    <string name="divider">divider</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model_number">Model Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="last_service_by">Last Service By</string>
    <string name="last_service_date">Last Service Date</string>
    <string name="click_view_equipment">Click to view equipment information.</string>
    <string name="location">Location</string>
    <string name="active">Active</string>
    <string name="started_on">Started On</string>
    <string name="point_of_contact">Point of Contact</string>
    <string name="details">Details</string>
    <string name="landing_message">Click the Connect Account button below to connect your Roopairs account to start requesting on-demand service. If you do not have a Roopairs account, click Create Account.</string>
    <string name="main_box">TextView</string>
    <string name="change_service_location">Change Service Location</string>
    <string name="error_login">Incorrect username and/or password.</string>
    <string name="error_register">Email is already registered with a Roopairs account.</string>
    <string name="choose_service_location">CHOOSE A SERVICE LOCATION</string>
    <string name="choose_service_provider">Choose a Service Provider</string>
    <string name="invalid_address">Not a valid address.</string>
    <string name="add_service_provider">Add Service Provider</string>
    <string name="change_location">Change Location</string>
    <string name="error_phone">Please enter a valid phone number.</string>
    <string name="error_provider">No service provider with this phone number was found in our system.</string>
    <string name="already_added_provider">You have already added this provider.</string>
    <string name="already_added_location">You have already added this location.</string>
    <string name="current_service_location">CURRENT SERVICE LOCATION</string>
    <string name="loading">Loading</string>
    <string name="continue_button">Continue</string>
    <string name="error_server">Error connecting with the server.</string>
    <string name="address">ADDRESS</string>
    <string name="service_location">Service Location</string>
    <string name="choose_location">Choose Service Location</string>
    <string name="add_location">Add Location</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="title_activity_login_location">Login_location</string>
    <string name="title_activity_landing">Connect your account</string>
    <string name="add_another_service_location">+ Add Another Service Location</string>
    <string name="add_service_location">Add Service Location</string>
    <string name="title_activity_preferred_providers">PreferredProviders</string>
    <string name="tab_text_1">Preferred</string>
    <string name="tab_text_2">Network</string>
    <string name="networkInfo">networkInfo</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="add_provider">Add Provider</string>
    <string name="enter_phone_number">Enter the phone number of one of your preferred service providers to start requesting service from them.</string>
    <string name="preferred_service_provider">Preferred Service Providers</string>
    <string name="add_another_service_provider">+ Add Another Service Provider</string>
    <string name="newJobRequest">New Job Request</string>
    <string name="generalAppliance">General Appliance</string>
    <string name="lightingAndElectrical">Lighting and Electrical</string>

    <string name="andElectrical">and Electrical</string>
    <string name="plumbing">Plumbing</string>
    <string name="hvac">HVAC</string>
    <string name="appliance">Appliance</string>
    <string name="notableJobs">Notable Jobs</string>
    <string name="allJobs">All Jobs</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="declined">Declined</string>
    <string name="archived">Archived</string>
    <string name="cancelled">Cancelled</string>

    <string name="no_jobs">No jobs to display</string>
    <string name="timeFormat">yyyy-MM-dd HH:mm:ss</string>
    <string name="no_pending_jobs">No pending jobs.</string>
    <string name="no_scheduled_jobs">No scheduled jobs.</string>
    <string name="no_in_progress_jobs">No in progress jobs.</string>
    <string name="no_archived_jobs">No archived jobs.</string>
    <string name="no_cancelled_jobs">No cancelled jobs.</string>
    <string name="no_declined_jobs">No declined jobs.</string>
    <string name="inProgress">In Progress</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="skills"> Skills</string>
    <string name="license_number"> License Number</string>
    <string name="company_phone"> Company Phone</string>
    <string name="company_email"> Company Email</string>
    <string name="view_completed"><u>View Archived Jobs</u></string>
    <string name="view_current"><u>View Current Jobs</u></string>
    <string name="search_service_provider">Search Service Provider..</string>
    <string name="phone_number_error">Enter a Valid Phone Number</string>

    <string name="service_provider_details"> Service Provider Details</string>
    <string name="overview"> Overview</string>
    <string name="starting_cost"> starting cost</string>
    <string name="remove_provider"> Remove Provider</string>
    <string name="details_exception_message"> No %1$s provided.</string>
    <string name="details_price_exception_message">$%1$s / hour</string>
    <string name="network_service">This service is currently not available.</string>
    <string name="preferred">Preferred</string>
    <string name="network">Network</string>
    <string name="chooseEquipmentTitle">Choose Equipment</string>
    <string name="select_one_of_the_equipment_items_on_the_left_to_view_details_and_analytics">Select one of the equipment items on the left to view details and analytics.</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="add">Add</string>
    <string name="required">Required Field</string>
    <string name="display_name">Display Name</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="overview_text">overview</string>
    <string name="email">email</string>
    <string name="skills_text">skills</string>
    <string name="contractor_license_number">contractor_license_number</string>
    <string name="save_equipment_error">Equipment details could not be saved at this time.</string>
    <string name="describe_the_job">Describe the Job</string>
    <string name="what_happened">What Happened?</string>
    <string name="when_do_you_need_it_fixed">When do you need it fixed?</string>
    <string name="who_should_they_ask_for">Who should they ask for?</string>
    <string name="what_s_their_phone_number">What\'s their phone number? (optional)</string>
    <string name="send_request">Send Request</string>
    <string name="fill_out_fields">Please fill out all required fields.</string>
    <string name="search_hvac">Search HVAC...</string>
    <string name="search_plumbing">Search Plumbing...</string>
    <string name="search_general_appliance">Search General Appliance...</string>
    <string name="search_lighting">Search Lighting...</string>
    <string name="phone">phone</string>
    <string name="empty_field">--</string>
    <string name="name">name</string>
    <string name="starting_cost_text"> \u0020starting cost</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="equipment_analytics">Equipment Analytics</string>
    <string-array name="industry_type">
        <item>Residential</item>
        <item>Commercial Business</item>
        <item>Industrial</item>
    </string-array>
    <string-array name="settings_type">
        <item>Preferred Providers</item>
        <item>Service Location</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="time">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="job_analysis">
        <item>All</item>
        <item>Repair</item>
        <item>Maintenance</item>
        <item>Installation</item>
    </string-array>
    <string-array name="time_analysis">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="option_analysis">
        <item>Cost</item>
        <item>Job Requests</item>
    </string-array>
    <string-array name="option_total_analysis">
        <item>Total Cost</item>
        <item>Total Jobs</item>
    </string-array>
</resources>
