<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/backgroundBox"
        android:layout_width="394dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/choose_service_location"
        android:layout_width="177dp"
        android:layout_height="0dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="sans-serif"
        android:text="@string/service_location"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/backgroundBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/backgroundBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/choose_service_location"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginBottom="211dp"
        android:background="@drawable/button_border"
        android:text="@string/add_location"
        android:textAllCaps="false"
        android:textColor="#06C47B"
        android:textColorHint="#00F8F7F7"
        android:textColorLink="#00FCF9F9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_service_location" />

</androidx.constraintlayout.widget.ConstraintLayout>